Skip to content

AV1 configuration change doesn't seem to be handled properly

I took 2 parts of the Netflix Chimera sample with different resolutions and muxed them into raw OBU files (from a recent ffmpeg), then concatenated them.

The raw OBU file is demuxed with the AV1 low overhead OBU demuxer in libavformat. The dav1d module can decode the file all the way through although after the resolution change the buffers don't seem correct.

When forcing the packetizer (to add the proper extra data), only the first part of the file is read.

2-chimera.obu

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information